rsync changes in 2.6.0cvs
